# albumentations

./: .appveyor.yml  .darglint  .deepsource.toml  .flake8  .gitattributes  .gitignore  .isort  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yml  .style.yapf  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  algorithm.py  black.toml  check_diy_coverage  codecov.yaml  example.ipynb  mypy.ini  noxfile.py  old_setup.cfg  old_setup.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  test.py  usage_example.py  yapf.sh
.cursor/rules/: albumentations-rules.mdc  coding-guidelines.mdc  mosaic-rules.mdc
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: add-a-company-as-a-user-of-albumentations.yaml  bug-report.md  code-quality.md  community.md  documentation.md  feature-request.md  localization.md  performance.md  question.md  ui.md
.github/workflows/: ci.yml  codeflash.yaml  codeflash.yml  coverage.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml  upload_to_pypi.yml
albumentations/: __init__.py  __init__.py.orig  _version.py  check_version.py  composition.py  detection_transforms_example.py  diy_coverage.py  example_transform.py  functional.py  iaa_transforms.py  random_utils.py  torch_functional.py  torch_transforms.py  transforms.py  transforms_interface.py
albumentations/augmentations/: __init__.py  bbox.py  bbox_utils.py  configs.py  domain_adaptation.py  domain_adaptation_functional.py  functional.py  geometric.py  geometric_functional.py  histogram_matching.py  keypoints_utils.py  transforms.py  utils.py
albumentations/augmentations/SingleUnderwaterImageEnhancementandColorRestoration/: README.md  __init__.py
albumentations/augmentations/blur/: functional.py  transforms.py
albumentations/augmentations/color/: functional.py  transforms.py
albumentations/augmentations/crops/: functional.py  transforms.py
albumentations/augmentations/domain_adaptation/: functional.py  transforms.py
albumentations/augmentations/dropout/: __init__.py  channel_dropout.py  coarse_dropout.py  cutout.py  functional.py  grid_dropout.py  mask_dropout.py  transforms.py  xy_masking.py
albumentations/augmentations/eraser/: __init__.py  functional.py  metadata.py
albumentations/augmentations/geometric/: __init__.py  distortion.py  flip.py  functional.py  pad.py  resize.py  rotate.py  transforms.py
albumentations/base/: transforms.py
albumentations/core/: batch_utils.py  bbox_utils.py  composition.py  composition.py.orig  hub_mixin.py  keypoints_utils.py  label_manager.py  pydantic.py  serializable.py  serialization.py  six.py  transforms_interface.py  type_definitions.py  types.py  utils.py  validation.py
albumentations/detection/: functional.py  transforms.py
albumentations/iaa/: transforms.py
albumentations/imgaug/: stubs.py  transforms.py
albumentations/pcaug/: functional.py  transforms.py
albumentations/pytorch/: __init__.py  functional.py  transforms.py  transforms.py.orig
albumentations/torch/: __init__.py  functional.py  transforms.py
albumentations/utils/: gpu_benchmark.py
benchmark/: Dockerfile  README.md  benchmark.py  benchmark_bbox.py  benchmark_keypoints.py  create_plot.py  image_benchmark.py  requirements.in  requirements.txt  utils.py
conda.recipe/: build_upload.sh  conda_build_config.yaml  meta.yaml
docs/: Makefile  citations.rst  conf.py  contributing.rst  examples.rst  hall_of_fame.rst  index.rst  issues_with_opencv.rst  make.bat  probabilities.rst  requirements.txt  theme.conf  writing_tests.rst
docs/_templates/: breadcrumbs.html  footer.html  layout.html
docs/api/: augmentations.rst  core.rst  imgaug.rst  index.rst  pcaug.rst  pytorch.rst  torch.rst
docs/api/pytorch_augs/: pytorch_dual.rst  (+2 more)
docs/augs_overview/: index.rst
docs/contributing/: coding_guidelines.md  environment_setup.md
notebooks/: Serialization.ipynb  example.ipynb  example_16_bit_tiff.ipynb  example_bbox_keypoint_rotate.py  example_bboxes.ipynb  example_bboxes2.ipynb  example_kaggle_salt.ipynb  example_keypoints.ipynb  example_multi_target.ipynb  migrating_from_torchvision_to_albumentations.ipynb  multi_target_example.ipynb  replay.ipynb  serialization.ipynb  showcase.ipynb
src/volumentations/: __init__.py
tests/: aug_definitions.py  compat.py  conftest.py  test_augmentations.py  test_batch_transforms.py  test_bbox.py  test_blur.py  test_check_version.py  test_compose_operators.py  test_core.py  test_core_utils.py  test_crop.py  test_domain_adaptation.py  test_find_dual_start_end.py  test_functional.py  test_functional_cutout.py  test_functional_dropout.py  test_functional_mixing.py  test_functionals.py  test_hub_mixin.py  test_imgaug.py  test_imgaug_imports.py  test_iso_aug.py  test_keypoint.py  test_mixing.py  test_mosaic.py  test_other.py  test_pcaug.py  test_per_worker_seed.py  test_pydantic.py  test_pytorch.py  test_random.py  test_random_crop_volume_bug.py  test_randomstate.py  test_resize_area_downscale.py  test_serialization.py  test_serialization_backward_compatibility.py  test_targets.py  test_text.py  test_torch.py  (+2 more)
tests/files/: output_v0.4.6.json  output_v0.4.6_with_totensor.json  output_v0.4.6_without_totensor.json  output_v1.1.0_with_totensor.json  output_v1.1.0_without_totensor.json  transform_serialization_v2_with_totensor.json  transform_serialization_v2_without_totensor.json  transform_v1.1.0_with_totensor.json  transform_v1.1.0_without_totensor.json
tests/functional/: test_affine.py  test_blur.py  test_dropout.py  test_functional.py  test_geometric.py  test_mixing.py
tests/pytorch/: test_dual_transforms.py  test_image_only_transforms.py  test_pytorch.py
tests/transforms3d/: test_functions.py  test_pytorch.py  test_targets.py  test_transforms.py
tools/: check_albucore_version.py  check_defaults.py  check_docstring_types.py  check_docstrings.py  check_example_docstrings.py  check_naming_conflicts.py  check_no_defaults_in_schemas.py  make_gpu_docs.py  make_supported_targets_table.py  make_transforms_docs.py  make_transforms_examples.ipynb  make_used_by_docs.py
(+169 files in other folders)
